# clai

./: LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
clai/: __init__.py  backends.py  prompts.py  tools.py
clai/backend/: __init__.py  azure_openai.py  mistral.py  openai.py
clai/backend/azure_openai/: __init__.py
clai/backend/mistral/: __init__.py  tools.py
clai/backend/openai/: __init__.py  tools.py
tests/: test_cli.py  test_mistral_tools.py  test_reasoning.py
