[project]
name = "clai"
version = "0.1.0"
description = "A CLI tool that facilitates decision-making, automation, and problem-solving through the use of LLM AI."
authors = [
    {name = "Jelle Smet", email = "development@smetj.net"},
]

dependencies = [
    "openai>=1.95.1",
    "tiktoken>=0.9.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.6",
    "jsonschema>=4.23.0",
    "mistralai>=1.9.2"
]

[project.scripts]
clai = "clai:main"

[project.urls]
homepage = "https://github.com/smetj/clai"
repository = "https://github.com/smetj/clai"
