[project]
name = "clai"
version = "0.4.0"
description = "A CLI tool that facilitates decision-making, automation, and problem-solving through the use of LLM AI."
authors = [
    {name = "Jelle Smet", email = "development@smetj.net"},
]

dependencies = [
    "openai>=2.7.1",
    "tiktoken>=0.12.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.3",
    "jsonschema>=4.23.0",
    "mistralai>=2.1.3",
    "mistral-common[sentencepiece]>=1.8.5"
]

[project.scripts]
clai = "clai:main"

[project.urls]
homepage = "https://github.com/smetj/clai"
repository = "https://github.com/smetj/clai"
